--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -39,7 +39,7 @@
   font-family: "PacificoRegular", Arial, Helvetica, sans-serif;
   color: #678480;
   font-size: 102px;
-  line-height: 179px;
+  line-height: 1.4;
   margin-bottom: 40px;
 }
 #newborn .top__subtitle {
@@ -47,6 +47,9 @@
   font-size: 22px;
   line-height: 140%;
   color: #678480;
+}
+#newborn .top__subtitle_left {
+  text-align: left;
 }
 #newborn .top .console-underscore {
   display: inline-block;
@@ -72,6 +75,7 @@
   transition: background-color 0.4s;
   border-radius: 10px;
   border: none;
+  width: max-content;
 }
 #newborn .top__button:hover {
   cursor: pointer;
@@ -82,6 +86,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  min-width: 130px;
 }
 #newborn .parallax-wrap span:nth-child(1) {
   top: 10%;
@@ -175,6 +180,54 @@
   font-weight: 700;
 }
 
+@media (max-width: 1024px) {
+  #newborn .top__content {
+    max-width: 600px;
+  }
+  #newborn .top h1 {
+    font-size: 80px;
+  }
+  #newborn .grid {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+  }
+}
+@media (max-width: 767px) {
+  #newborn .top {
+    background-size: 50%, 50%;
+  }
+  #newborn .top__content {
+    padding-top: 30%;
+  }
+  #newborn .top__subtitle {
+    font-size: 20px;
+  }
+  #newborn .top h1 {
+    font-size: 40px;
+  }
+  #newborn .grid {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    padding: 15px;
+    column-gap: 15px;
+  }
+  #newborn .grid-block__text {
+    font-size: 16px;
+  }
+  #newborn .parallax-wrap span:nth-child(1) {
+    top: 20px;
+    left: 15px;
+  }
+}
+@media (max-width: 460px) {
+  #newborn .grid {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
+}
 @keyframes spin {
   50% {
     -webkit-transform: rotate(180deg);
