--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -46,7 +46,7 @@
             font-family: 'PacificoRegular', Arial, Helvetica, sans-serif;
             color: #678480;
             font-size: 102px;
-            line-height: 179px;
+            line-height: 1.4;
             margin-bottom: 40px;
         }
 
@@ -55,6 +55,10 @@
             font-size: 22px;
             line-height: 140%;
             color: #678480;
+
+            &_left {
+                text-align: left;
+            }
         }
 
         .console-underscore {
@@ -83,6 +87,7 @@
             transition: background-color .4s;
             border-radius: 10px;
             border: none;
+            width: max-content;
             
             &:hover {
                 cursor: pointer;
@@ -97,6 +102,7 @@
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
+            min-width: 130px;
 
             &:nth-child(1) {
                 top: 10%;
@@ -204,6 +210,73 @@
                     font-weight: 700;
                 }
             }
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    #newborn {
+        .top {
+            &__content {
+                max-width: 600px;
+            }
+
+            h1 {
+                font-size: 80px;
+            }
+        }
+
+        .grid {
+            -webkit-column-count: 3;
+            -moz-column-count: 3;
+            column-count: 3;
+        }
+    }
+}
+
+@media (max-width: 767px) {
+    #newborn {
+        .top {
+            background-size: 50%, 50%;
+
+            &__content {
+                padding-top: 30%;
+            }
+
+            &__subtitle {
+                font-size: 20px;
+            }
+
+            h1 {
+                font-size: 40px;
+            }
+        }
+
+        .grid {
+            -webkit-column-count: 2;
+            -moz-column-count: 2;
+            column-count: 2;
+            padding: 15px;
+            column-gap: 15px;
+
+            &-block__text {
+                font-size: 16px;
+            }
+        }
+
+        .parallax-wrap span:nth-child(1) {
+            top: 20px;
+            left: 15px;
+        }
+    }
+}
+
+@media (max-width: 460px) {
+    #newborn {
+        .grid {
+            -webkit-column-count: 1;
+            -moz-column-count: 1;
+            column-count: 1;
         }
     }
 }
